<resources>
    <string name="app_name">FarmInfo</string>
    <string name="animal_icon">Ícono del animal</string>
    <string name="back_text">Volver</string>
    <string name="medicine">Medicamentos</string>
    <string name="slaughterhouses">Plantas de Beneficio</string>
    <string name="search">Buscar</string>
    <string name="medicineInfo">Descripción</string>
    <string name="medicineType">Clase</string>
    <string name="medicinePresentation">Presentación</string>
    <string name="slaughterhouseName">Razón Social</string>
    <string name="slaughterhouseDepartament">Departamento</string>
    <string name="slaughterhouseTown">Municipio</string>
    <string name="logo_description">Logo FarmInfo</string>
    <string name="noUpdatedMessage">Atención, es necesario actualizar la lista de %s para este animal. Por favor, conéctese a la red.</string>

    <string-array name="animal_names">
        <item>Aves de Corral</item>
        <item>Bovinos</item>
        <item>Caninos</item>
        <item>Caprinos</item>
        <item>Conejos</item>
        <item>Equinos</item>
        <item>Felinos</item>
        <item>Aves Ornamentales</item>
        <item>Ovinos</item>
        <item>Porcinos</item>
    </string-array>
</resources>
