<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="7">
    <TextView
        android:id="@+id/lblSlaughterhouseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/slaughterhouseName"
        android:textSize="18sp"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/lblSlaughterhouseDepartament"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/slaughterhouseDepartament"
        android:gravity="center"
        android:textSize="18sp"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/lblSlaughterhouseTown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/slaughterhouseTown"
        android:gravity="center"
        android:textSize="18sp"
        android:padding="12dp"/>
</LinearLayout>