<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_animal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.ingsoft.juandavids.farminfo.AnimalActivity">

    <TextView
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:background="#007db3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:typeface="sans"
        android:paddingTop="10dp"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/AppTitleTextView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/AppTitleTextView"
        android:layout_alignParentStart="true"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="Title Here:"
                android:textColor="#FFFFFF"
                android:background="#009CDE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:typeface="sans"
                android:paddingTop="18dp"
                android:paddingBottom="22dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/selectedGroupTextView"
                tools:ignore="HardcodedText" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:layout_below="@+id/selectedGroupTextView"
                android:layout_alignParentStart="true">

                <Button
                    android:text="@string/medicine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/buttonpush"
                    android:id="@+id/btnMedicine"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="#FFFFFF"
                    android:textSize="21sp"
                    android:onClick="btnMedicine_click"
                    android:textAllCaps="false"/>

                <Button
                    android:text="@string/slaughterhouses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSlaughterhouse"
                    android:layout_below="@+id/btnMedicine"
                    android:layout_marginTop="25dp"
                    android:textSize="21sp"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/buttonpush"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:onClick="btnSlaughterhouse_click"
                    android:textAllCaps="false"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <ImageView
        android:padding="5dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:srcCompat="@drawable/leftarrow"
        android:id="@+id/btnBack"
        android:scaleType="fitCenter"
        android:contentDescription="@string/back_text"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:onClick="btnBack_click"/>

</RelativeLayout>

